<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_export"
        android:icon="@android:drawable/ic_menu_share"
        android:title="@string/export"
        app:showAsAction="never">
        <menu>
            <item
                android:id="@+id/action_export_file"
                android:title="@string/export_to_file" />
            <item
                android:id="@+id/action_export_clipboard"
                android:title="@string/export_to_clipboard" />
        </menu>
    </item>

    <item
        android:id="@+id/action_import"
        android:title="@string/import_rules"
        app:showAsAction="never">
        <menu>
            <item
                android:id="@+id/action_import_file"
                android:title="@string/import_from_file" />
            <item
                android:id="@+id/action_import_clipboard"
                android:title="@string/import_from_clipboard" />
        </menu>
    </item>

</menu>